--- a/app/src/main/res/layout/activity_nuevo_ticket.xml
+++ b/app/src/main/res/layout/activity_nuevo_ticket.xml
@@ -33,7 +33,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/cat_ticket"
+            android:textSize="16sp"
+            android:background="@null"
 
             android:text=" " />
     </com.google.android.material.textfield.TextInputLayout>
@@ -50,7 +51,14 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/titulo_ticket" />
+            android:hint="@string/titulo_ticket"
+            android:background="@drawable/et_text"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textSize="16sp"/>
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -65,7 +73,13 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/descripcion_ticket" />
+            android:hint="@string/descripcion_ticket"
+            android:background="@drawable/et_text"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textSize="16sp"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
