--- a/app/src/main/res/layout/activity_detalle_ticket.xml
+++ b/app/src/main/res/layout/activity_detalle_ticket.xml
@@ -21,10 +21,22 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
 
-
-    <!-- CardView 1 -->
-    <androidx.cardview.widget.CardView
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/custom_actionbar"
+        app:layout_constraintBottom_toTopOf="@id/llBotones">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+
+        <!-- CardView 1 -->
+    <androidx.cardview.widget.CardView
         android:id="@+id/CVDetalleTicket"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -258,6 +270,8 @@
                 android:text="EMAIL"/>
         </LinearLayout>
         </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
     <!-- Botones -->
     <LinearLayout
         android:id="@+id/llBotones"
@@ -266,14 +280,13 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
->
+        app:layout_constraintRight_toRightOf="parent">
 
         <Button
             android:id="@+id/btnDetalleCancelar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="8dp"
             android:layout_weight="1"
             android:background="@drawable/button_bg"
             android:textColor="@color/white"
@@ -284,7 +297,7 @@
             android:id="@+id/btnDetalleGuardar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="8dp"
             android:layout_weight="1"
             android:background="@drawable/button_bg"
             android:textColor="@color/white"
