--- a/app/src/main/res/layout/activity_tickets_list.xml
+++ b/app/src/main/res/layout/activity_tickets_list.xml
@@ -65,6 +65,6 @@
         android:elevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
