--- a/app/src/main/res/layout/activity_detalle_usuario.xml
+++ b/app/src/main/res/layout/activity_detalle_usuario.xml
@@ -349,7 +349,7 @@
             android:textColor="@color/black"
             android:textSize="12sp" />
         <Button
-            android:id="@+id/btnRuso"
+            android:id="@+id/btnRussian"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
